--- a/README
+++ b/README
@@ -12,4 +12,4 @@ Optional parameters:
 Identity= default 100
 E-Value= default 0.00
 Bit score= default 0.00
-Length = default 0
+Length = default 0difference
